# calcultor_mcp_ray

./: CLAUDE.md  main.py  pyproject.toml
calculator-mcp/: .mcp.json  README.md  fastmcp.json  pyproject.toml
calculator-mcp/src/calculator_mcp/: __init__.py  server.py
calculator-mcp/src/calculator_mcp/base/: __init__.py  models.py  operation.py  prompt_registry.py  registry.py
calculator-mcp/src/calculator_mcp/operations/: __init__.py  absolute.py  addition.py  average.py  combination.py  compound_interest.py  cosine.py  cube.py  discount.py  division.py  factorial.py  gcd.py  lcm.py  logarithm.py  median.py  modulo.py  multiplication.py  nth_root.py  percentage.py  permutation.py  power.py  prime_check.py  simple_interest.py  sine.py  square.py  square_root.py  standard_deviation.py  subtraction.py  tangent.py  variance.py
calculator-mcp/src/calculator_mcp/prompts/: __init__.py  base_prompt.py  health_metrics.py  (+2 more)
calculator-mcp/tests/: test_integration.py
calculator-mcp/tests/test_operations/: test_absolute.py  test_addition.py  test_average.py  test_combination.py  test_compound_interest.py  test_cosine.py  test_discount.py  test_division.py  test_factorial.py  test_gcd.py  test_lcm.py  test_logarithm.py  test_median.py  test_modulo.py  test_percentage.py  test_permutation.py  test_power.py  test_prime_check.py  test_simple_interest.py  test_sine.py  test_square_root.py  test_standard_deviation.py  test_tangent.py  test_variance.py
calculator-mcp/tests/test_prompts/: __init__.py  test_health_metrics.py  test_multiplication_table.py  test_nutrition_planner.py
(+15 files in other folders)
